src/pages/App.css
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

html {
	font-size: 16px;
	font-family: "Raleway", sans-serif;
	color: #555;
}

ul,
nav {
	list-style: none;
}

a {
	text-decoration: none;
	opacity: 0.75;
	color: #fff;
}

a:hover {
	opacity: 1;
}

a.btn {
	border-radius: 4px;
	text-transform: uppercase;
	font-weight: bold;
	text-align: center;
	background-color: #7be0d6;
	opacity: 1;
	transition: all 400ms;
}

a.btn:hover {
	background-color: #7be0c5;
}

section {
	display: flex;
	flex-direction: column;
	align-items: center;
	/* padding: 100px 80px; */
}

section:not(.hero):nth-child(even) {
	background-color: #f5f5f5;
}

.grid {
	width: 100%;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
}

hr {
	width: 250px;
	height: 3px;
	background-color: #7be0c5;
	border: 0;
	/* margin-bottom: 50px; */
}

.image-1 {
	background-image: url("https://images.unsplash.com/photo-1584466990376-09422a2b033a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8ODF8fGhvc3BpdGFsfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60");
} 

.image-2 {
	background-image: url("https://images.unsplash.com/photo-1550831106-f8d5b6f1abe9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OTF8fGhvc3BpdGFsfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60");
} 
 
.image-3 {
	background-image: url("https://images.unsplash.com/photo-1606811841689-23dfddce3e95?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTAyfHxob3NwaXRhbHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60");
} 

.image-4 {
	background-image: url("https://images.unsplash.com/photo-1588966914896-8bb0f66c78a6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTM0fHxob3NwaXRhbHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60");
}

section h3.title {
	text-transform: capitalize;
	font: bold 48px "Amatic SC", sans-serif;
	margin-bottom: 30px;
	text-align: center;
}

section p {
	max-width: 775px;
	line-height: 2;
	padding: 0 20px;
	margin-bottom: 30px;
	text-align: center;
}

@media (max-width: 800px) {
	section {
		padding: 50px 20px;
	}
}

/*Header Styles*/

header {
	/* position: absolute; */
  position: relative;
	width: 100%;
	display: flex;
	justify-content: space-between;
	align-items: center;
	/* padding: 35px 100px 0; */
	animation: 1s fadein 0.5s forwards;
	opacity: 0;
	color: #fff;
	z-index: 2;
}

@keyframes fadein {
	100% {
		opacity: 1;
	}
}

header h2 {
	font-family: "Amatic SC", sans-serif;
}

header nav {
	display: flex;
	margin-right: -15px;
}

header nav li {
	margin: 0 15px;
}

@media (max-width: 800px) {
	header {
		padding: 20px 50px;
		flex-direction: column;
	}

	header h2 {
		margin-bottom: 15px;
	}
}

/*Hero Styles*/

.hero {
	position: relative;
	justify-content: center;
	text-align: center;
	min-height: 100vh;
	color: #fff;
}

.hero h1 {
	font: 72px "Amatic SC", sans-serif;
	margin-bottom: 65px;
}

.hero h3 {
	font: 28px "Raleway", sans-serif;
	font-weight: 3000;
	margin-bottom: 40px;
}

.hero a.btn {
	padding: 20px 46px;
}

.hero-content-area {

	opacity: 0;
	margin-top: 100px;
	animation: 1s slidefade 1s forwards;
}

@keyframes slidefade {
	100% {
		opacity: 1;
		margin: 0;
	}
}

@media (max-width: 800px) {
	.hero {
		min-height: 600px;
    display: flex;
	}

	.hero h1 {
		font-size: 48px;
	}

	.hero h3 {
		font-size: 24px;
	}

	.hero a.btn {
		padding: 15px 40px;
	}
}

/*Services Section*/

.services .grid li {
	height: 350px;
	padding: 20px;
	background-clip: content-box;
	background-size: cover;
	background-position: center;
}

.services .grid li.small {
	flex-basis: 30%;
}

.services .grid li.large {
	flex-basis: 70%;
}

@media (max-width: 1100px) {
	.services .grid li.small,
	.services .grid li.large {
		flex-basis: 50%;
	}
}

@media (max-width: 800px) {
	.services .grid li.small,
	.services .grid li.large {
		flex-basis: 100%;
	}
}

/*Testimonials Section*/

.testimonials .quote {
	font-size: 22px;
	font-weight: 300;
	line-height: 1.5;
	margin: 40px 0 25px;
}

@media (max-width: 800px) {
	.testimonials .quote {
		font-size: 18px;
		margin: 15px 0;
	}

	.testimonials .author {
		font-size: 14px;
	}
}

/* // Registrar form */
:root {
  --font: "Lato", sans-serif;
  --max-width: 1400px;
  --radius: 12px;
  --btn-radius: 4px;
  --i-padding: 1rem;
  --o-padding: 2rem;
}

* {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  margin: 0;
}

body {
  margin: 0 var(--o-padding);
  font-family: var(--font);
  color: black;
  background: -webkit-gradient(
    linear,
    left bottom,
    left top,
    from(#c5c5c5),
    to(#f5f5f5)
  );
  background: -o-linear-gradient(bottom, #c5c5c5, #f5f5f5);
  background: linear-gradient(0deg, #c5c5c5, #f5f5f5);
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 100vh;
}

.container {
  max-width: var(--max-width);
  width: 200%;
  margin: auto;
  /* padding-left: ; */
  min-height: 600px;
  height: 100%;
  overflow: hidden;
  position: relative;
  border-radius: var(--radius);
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-shadow: 0 10px 1rem #0004;
  box-shadow: 0 10px 1rem #0004;
}

.back {
  position: absolute;
  left: 0;
  top: 0;
  background: url("https://i.imgur.com/EulHW7S.jpeg") center / cover no-repeat;
  height: 100%;
  width: 100%;
  z-index: -1;
}

.brand {
  width: 40%;
  padding: var(--i-padding);
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  justify-content: end;
  position: relative;
}

.brand .logo {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 5px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  left: 49%;
  top: 5rem;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}
.brand .logo h1 {
  color: #392f32;
  text-transform: uppercase;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 34px;
  font-weight: 400;
  letter-spacing: -1px;
}
.brand .logo .name {
  padding-left: 2px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 20px;
  letter-spacing: 12px;
  font-weight: 400;
}

.brand .copyright {
  font-size: 13px;
  font-weight: 300;
  text-align: center;
  color: #fffa;
}
.brand .copyright a {
  -webkit-transition: color 0.2s ease;
  -o-transition: color 0.2s ease;
  transition: color 0.2s ease;
  color: #fffa;
}
.brand .copyright a:hover {
  color: #fff;
}

.formWrapper {
  width: 60%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  padding: var(--o-padding);
  background: #fff1;
  border-left: solid 1px #0001;
  -webkit-backdrop-filter: blur(8px);
  backdrop-filter: blur(8px);
}

.formWrapper .form {
  width: 100%;
  max-width: 504px;
  margin: auto;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: var(--o-padding);
}

.formWrapper .form h2 {
  text-transform: uppercase;
  text-align: center;
  font-weight: 400;
  padding-bottom: 10px;
  border-bottom: solid 1px #0001;
}

form {
  display: -ms-grid;
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
  gap: calc(var(--i-padding) + 6px);
  justify-items: center;
}

.inputWrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}
.inputWrapper input {
  border: none;
  font-size: 16px;
  outline: 0;
  border-radius: var(--btn-radius);
  background: #fff2;
  border: solid 1px #0001;
  padding: var(--i-padding);
  min-width: 40%;
  cursor: text;
}

.inputWrapper label {
  cursor: text;
  padding: 4px 6px;
  color: #0006;
  position: absolute;
  left: calc(1rem - 4px);
  top: 10px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform-origin: left;
  -ms-transform-origin: left;
  transform-origin: left;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: all 0.2s ease;
  -o-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

.inputWrapper input:focus + label,
.inputWrapper input:valid + label {
  color: #fff;
  text-shadow: 0 1px 4px #0009;
  top: -14px;
  left: 11px;
  -webkit-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

#register {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0 auto;
  min-height: initial;
  height: 47px;
  width: 100%;
  max-width: 230px;
  background: #0007;
  padding: var(--i-padding);
  color: #fff;
  border: unset;
  border-radius: var(--btn-radius);
  cursor: pointer;
  -webkit-transition: all 0.2s ease;
  -o-transition: all 0.2s ease;
  transition: all 0.2s ease;
}
#register:hover {
  background: #000;
}

